@@ -16,15 +16,19 @@ Les modifications faites par ce mod concernent essentiellement la qualité de la
 Le mod est focalisé sur les accords de mots, les règles de grammaire ou de typographie etc. Si vous avez l'œil averti, vous apprecierez les changements par-ci par-là. Des captures d'écran les illustrent dans le Wiki du mod, https://github.com/b606/RimWorld-LanguageWorker_French/wiki. N'hésitez pas à remonter les suggestions, les problèmes ou bugs sur ce site.
 
 &lt;b&gt;Merci à&lt;/b&gt;
-Elevator89 pour le code initial, à Adirelle pour les premiers Regex, Pardeike pour libHarmony, et kiliak pour les tests.
+Elevator89 qui m'a donné l'idée de développer un mod languageworker, à Adirelle pour les premiers Regex, Pardeike pour libHarmony, et kiliak pour les tests. La police de caractères RimWorld est de Marnador.
 
 &lt;b&gt;Téléchargement&lt;/b&gt;
 Steam : https://github.com/b606/RimWorld-LanguageWorker_French/releases/latest
 
-&lt;b&gt;Autre mod&lt;/b&gt;
+&lt;b&gt;Autres mods&lt;/b&gt;
 EdB Prepare Carefully [Français]
 Traduction en français de ce mod.
 Steam : https://steamcommunity.com/sharedfiles/filedetails/?id=2081907934
+
+¿Habla usted español? [anguageWorker_Spanish Mod]
+Un mod para mejorar el español en RimWorld.
+Steam : https://steamcommunity.com/sharedfiles/filedetails/?id=2293997580
 
 Numbers [Français]
 Traduction française du mod &lt;b&gt;Numbers&lt;/b&gt; 
