@@ -1,3 +1,8 @@
+2020-11-22  b606  <7627533+b606@users.noreply.github.com>
+
+	* About.xml:
+	* SteamDescription.txt: Updated description files.
+
 2020-10-29  b606  <7627533+b606@users.noreply.github.com>
 
 	* README.md: Fix: ReGex elisions for "(à|À) <tag>le(s?) "
